--- a/FirstApp/src/index.html
+++ b/FirstApp/src/index.html
@@ -6,8 +6,17 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/bootstrap.min.css" >
+
 </head>
 <body>
   <app-root></app-root>
+  <app-ng-for-add-comp></app-ng-for-add-comp>
+  <app-databinding-sample></app-databinding-sample>
+
+
+  <script src="assets/jquery-3.3.1.slim.min.js"></script>
+  <script src="assets/popper.min.js"></script>
+  <script src="assets/bootstrap.min.js"></script>
 </body>
 </html>
